[package]
name = "aoc2019"
version = "0.0.1"
authors = ["Joost Molenaar <jjm@j0057.nl>"]
edition = "2018"

[dependencies]
itertools = "0.8"
num-complex = "0.2"
permutohedron = "0.2"
bytecount = "0.6"
thiserror = "1.0"
regex = "1.3"
lazy_static = "1.4"

[[bin]]
name = "aoc2019"

[profile.release]
debug = true
