[package]
name = "aoc2019"
version = "0.0.1"
authors = ["Joost Molenaar <jjm@j0057.nl>"]
edition = "2018"

[dependencies]
itertools = "0.10"
num-complex = "0.3.1"
permutohedron = "0.2.4"
bytecount = "0.6.2"
thiserror = "1.0.23"
regex = "1.4.3"
lazy_static = "1.4.0"

[[bin]]
name = "aoc2019"

[profile.release]
debug = true
